--- a/app.json
+++ b/app.json
@@ -40,7 +40,7 @@
 
         "description": "Get this value from https://my.telegram.org",
 
-        "value": "8238728608:AAEvYcArv-PvPc6hrdYoRMMn9BE_mTPJMLA",
+        "value": "388a6121ab68f24a0192e7009265a179",
 
         "required": true
 
